--- a/Iyby/pages/zappointment/appointment.wxss
+++ b/Iyby/pages/zappointment/appointment.wxss
@@ -114,6 +114,30 @@
   line-height: 70rpx;
   width: 140rpx;
   font-size: 30rpx;
-  color: #fbf9fe;
   margin-left: 77%;
+  background-color: rgb(77, 192, 42);
+  color: #fff;
+  border-radius: 98rpx; 
+}
+/* 圆角样式 */
+.btnXq::after {
+  border-radius: 98rpx;
+}
+
+.cart-list{
+    display: inline-block;
+    width: 300rpx;
+    height: 105rpx;
+    line-height: 50rpx;
+    overflow: hidden;
+}
+
+.information{
+  margin-left: 20px;
+}
+
+/* 列表样式 */
+.cart-list1{
+  background-color: #fff;
+  margin-bottom: 15px;
 }
