修改阙晓研的冲突

--- a/Iyby/pages/qaleadyentering/aleadyentering.wxml
+++ b/Iyby/pages/qaleadyentering/aleadyentering.wxml
@@ -1,3 +1,2 @@
-<!--pages/aleadyentering/aleadyentering.wxml-->
-  
-
+<!--pages/qaleadyentering/aleadyentering.wxml-->
+<text>pages/qaleadyentering/aleadyentering.wxml</text>
