--- a/Iyby/pages/zparticulars/particulars.wxml
+++ b/Iyby/pages/zparticulars/particulars.wxml
@@ -4,5 +4,9 @@
         <text class="information">作者：{{item.Author}}\n</text>
         <text class="information">价格：￥{{item.Price}}\n</text>
         <text class="information">出版社信息：{{item.Message}}\n</text>
-        <text class="information">可借数量：{{item.LendNum}}</text>
+        <text class="information">预约的详情：{{item.LendNum}}\n</text>
+        <text class="information">图书状态：{{item.State}}\n</text>
+        <text class="information">图书内容：{{item.BooksContent}}\n</text>
+        <text class="information">作者简介：{{item.AuthorIntro}}\n</text>
+        <text class="information">目录：{{item.Catalogue}}\n</text>
   </view>
