--- a/Iyby/pages/zparticulars/particulars.wxml
+++ b/Iyby/pages/zparticulars/particulars.wxml
@@ -8,5 +8,5 @@
         <text class="information">图书状态：{{item.State}}\n</text>
         <text class="information">图书内容：{{item.BooksContent}}\n</text>
         <text class="information">作者简介：{{item.AuthorIntro}}\n</text>
-        <text class="information">目录：{{item.Catalogue}}\n</text>
+        <text class="information">目录：{{item.Catalogue}}</text>
   </view>
