--- a/Iyby/pages/zappointment/appointment.wxss
+++ b/Iyby/pages/zappointment/appointment.wxss
@@ -132,12 +132,9 @@
     overflow: hidden;
 }
 
-.information{
-  margin-left: 20px;
-}
-
 /* 列表样式 */
 .cart-list1{
   background-color: #fff;
   margin-top: 15px;
+  padding: 15px;
 }
