--- a/Iyby/pages/zoneaddress/oneaddress.wxss
+++ b/Iyby/pages/zoneaddress/oneaddress.wxss
@@ -1,1 +1,49 @@
 /* pages/zoneaddress/oneaddress.wxss */
+
+/*省市区的样式*/
+.picker{
+    padding: 13px;
+    background-color: #FFFFFF;
+    margin-top: 20px;
+}
+
+.textbox{
+    padding: 13px;
+    background-color: #FFFFFF;
+    margin-top: 20px;
+}
+
+.footer-add {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  background-color: #c81623;
+  border-radius: 0px;
+}
+
+.switchmr{
+  float: right;
+}
+
+page{background: #f4f4f4;} 
+
+.ad_popHd{height: 76rpx; line-height: 76rpx; font-size: 32rpx;text-align: center; border-bottom: 1px solid #cdd1cd; padding: 0 20rpx;color: #202120;} 
+
+.ad_popFt{ margin: 20rpx ; margin-top: 50rpx;} 
+
+.ad_popArea{ width: 708rpx; height:400rpx;font-size:30rpx;padding: 20rpx; box-sizing: border-box; -webkit-box-sizing: border-box; line-height: 40rpx; color: #333; background: #fff; } 
+
+.ad_popCout{ color: #969899; font-size: 24rpx; text-align: right; line-height: 58rpx; padding: 0 20rpx;} 
+
+.informBtn{background: #09bb07;color: #fff;font-size: 34rpx; margin-top: 38rpx;height: 88rpx;} 
+
+.one_stars{color: #999;} 
+
+.one_star{font-size: 20rpx;color: #999;} 
+
+.danger{ color: #f64400;} 
+
+.ad_popError{ background: #de352d; color: #fff; height: 58rpx; line-height: 58rpx; font-size: 24rpx; text-align: center; position: absolute; left: 0; top: 0; width: 100%; z-index:3;}
