--- a/Iyby/pages/fshow/show.wxml
+++ b/Iyby/pages/fshow/show.wxml
@@ -7,93 +7,18 @@
   </view>
   <view class="header-bg"></view>
   <view class="book-content">
-    <view>
+    <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
       <view class="book-list">
         <view class="book-image">
-          <image src='../../img/1.png'></image>
+          <image></image>
         </view>
         <view class="book-info">
           <view class="book-info-style">
-            <view>书名:IOS应用安全攻防实战</view>
-            <view>作者:[美]约翰坦·死的扎斯克\n</view>
-            <view>价格:79.00\n</view>
-            <view>出版信息:电子工业出版社\n</view>
-            <view>可借数量:0\n</view>
-          </view>
-        </view>            
-      </view>
-      <view class="line"></view>
-      <view class="book-list">
-        <view class="book-image">
-          <image src='../../img/2.png'></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:游戏机制</view>
-            <view>作者:[美]Ernest Adams\n</view>
-            <view>价格:89.00\n</view>
-            <view>出版信息:人民邮电出版社\n</view>
-            <view>可借数量:0\n</view>
-          </view>
-        </view>
-      </view>
-      <view class="line"></view>
-      <view class="book-list">
-        <view class="book-image">
-          <image src='../../img/3.png'></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:第一行代码</view>
-            <view>作者:郭霖\n</view>
-            <view>价格:79.00\n</view>
-            <view>出版信息:人民邮电出版社\n</view>
-            <view>可借数量:0\n</view>
-          </view>
-        </view>
-      </view>
-      <view class="line"></view>
-      <view class="book-list">
-        <view class="book-image">
-          <image src='../../img/13.png'></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:[HTML5 CSS3 jQuery Mobile]</view>
-            <view>作者:陈婉凌\n</view>
-            <view>价格:79.00\n</view>
-            <view>出版信息:清华大学出版社\n</view>
-            <view>可借数量:0\n</view>
-          </view>
-        </view>
-      </view>
-      <view class="line"></view>
-      <view class="book-list">
-        <view class="book-image">
-          <image src='../../img/12.png'></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:体验引擎：游戏设计全景</view>
-            <view>作者:Tynan SyLvester\n</view>
-            <view>价格:CNY 79.00\n</view>
-            <view>出版信息:电子工业出版社\n</view>
-            <view>可借数量:0\n</view>
-          </view>
-        </view>
-      </view>
-      <view class="line"></view>
-      <view class="book-list">
-        <view class="book-image">
-          <image src='../../img/14.png'></image>
-        </view>
-        <view class="book-info">
-          <view class="book-info-style">
-            <view>书名:哈利波特</view>
-            <view>作者:【英】J·K·罗琳\n</view>
-            <view>价格:99.00\n</view>
-            <view>出版信息:电子工业出版社\n</view>
-            <view>可借数量:0\n</view>
+            <view>书名：{{item.BooksName}}</view>
+            <view>作者：{{item.Author}}\n</view>
+            <view>价格：￥{{item.Price}}\n</view>
+            <view>出版社信息：{{item.Message}}\n</view>
+            <view>预约的数量：{{item.LendNum}}\n</view>
           </view>
         </view>
       </view>
