--- a/Iyby/pages/zappointment/appointment.wxml
+++ b/Iyby/pages/zappointment/appointment.wxml
@@ -1,5 +1,5 @@
 <!--pages/appointment/appointment.wxml-->
-  <view class="search-bar">
+  <!-- <view class="search-bar">
     <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
     <input placeholder="请输入书名" bindchange="bindname"/>
     <button type="primary" bindtap="queryBooks">查詢</button>
@@ -11,4 +11,33 @@
         <text class="information">价格：￥{{item.Price}}\n</text>
         <text class="information">出版社信息：{{item.Message}}\n</text>
         <text class="information">预约的数量：{{item.LendNum}}</text>
+  </view> -->
+
+<view class="content" scroll-y="true">
+  <view class="search-bar">
+    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+    <input placeholder="请输入书名" bindchange="inputChange"/>
+    <button type="primary" bindtap="queryBooks">查詢</button>
   </view>
+  <view class="header-bg"></view>
+  <view class="book-content">
+    <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+      <view class="book-list">
+        <view class="book-image">
+          <image></image>
+        </view>
+        <view class="book-info">
+          <view class="book-info-style">
+            <view>书名：{{item.BooksName}}</view>
+            <view>作者：{{item.Author}}\n</view>
+            <view>价格：￥{{item.Price}}\n</view>
+            <view>出版社信息：{{item.Message}}\n</view>
+            <view>预约的数量：{{item.LendNum}}\n</view>
+          </view>
+        </view>
+      </view>
+      <view class="line"></view>
+    </view>
+  </view>
+</view>
+
