--- a/Iyby/pages/zappointment/appointment.wxml
+++ b/Iyby/pages/zappointment/appointment.wxml
@@ -24,7 +24,8 @@
     <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
       <view class="book-list">
         <view class="book-image">
-          <image></image>
+          <image src="{{item.PicturePath}}"></image>
+          <view>{{item.PicturePath}}</view>
         </view>
         <view class="book-info">
           <view class="book-info-style">
