滑动页和图片，详情的改变

--- a/Iyby/pages/zappointment/appointment.wxml
+++ b/Iyby/pages/zappointment/appointment.wxml
@@ -25,8 +25,7 @@
               <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
                 <view class="book-list">
                   <view class="book-image">
-                    <image src="{{item.PicturePath}}"></image>
-                    <view>{{item.PicturePath}}</view>
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
                   </view>
                   <view class="book-info">
                     <view class="book-info-style">
@@ -49,8 +48,7 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
@@ -73,8 +71,7 @@
               <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
                 <view class="book-list">
                   <view class="book-image">
-                    <image src="{{item.PicturePath}}"></image>
-                    <view>{{item.PicturePath}}</view>
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
                   </view>
                   <view class="book-info">
                     <view class="book-info-style">
@@ -97,8 +94,7 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
@@ -121,8 +117,7 @@
             <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
               <view class="book-list">
                 <view class="book-image">
-                  <image src="{{item.PicturePath}}"></image>
-                  <view>{{item.PicturePath}}</view>
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
                 </view>
                 <view class="book-info">
                   <view class="book-info-style">
