--- a/Iyby/pages/zparticulars/particulars.wxml
+++ b/Iyby/pages/zparticulars/particulars.wxml
@@ -1,5 +1,5 @@
 <!--pages/zparticulars/particulars.wxml-->
-  <view class="cart-list1" wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+  <!-- <view class="cart-list1" wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
       <text class="inforleft">书名：</text><text class="inforright">{{item.BooksName}}\n</text>
       <text class="inforleft">作者：</text><text class="inforright">{{item.Author}}\n</text>
       <text class="inforleft">价格：￥</text><text class="inforright">{{item.Price}}\n</text>
@@ -10,4 +10,112 @@
       <text class="inforleft">作者简介：</text><text class="inforright">{{item.AuthorIntro}}\n</text>
       <text class="inforleft">目录：</text><text class="inforright">{{item.Catalogue}}</text>
 
+  </view> -->
+
+
+  <view class="cart-list1">
+    <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+      <view class="book-list">
+        <view class="book-image">
+          <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+        </view>
+        <view class="book-info">
+        <view class="book-info-style">
+          <view>书名：{{item.BooksName}}</view>
+          <view>作者：{{item.Author}}\n</view>
+          <view>价格：￥{{item.Price}}\n</view>
+          <view>出版社信息：{{item.Message}}\n</view>
+          <view>预约的数量：{{item.LendNum}}\n</view>
+        </view>
+      </view>
+    </view>
+      <view class="line"></view>
+    </view>
   </view>
+
+
+  <view class="container">
+	<view class="container-body">
+		<view class="tab">
+
+      <!-- 滑动列表头 -->
+			<view class="tab-nav">
+				<text wx:for="{{tabnav.tabitem}}" bindtap="setTab" class="{{showtab==index?'active':''}}" data-tabindex="{{index}}" data-type="{{item.type}}" wx:key="{{item.type}}">{{item.text}}</text>
+				<view class="tab-line" style="width:{{100/tabnav.tabnum}}%;transform:translateX({{100*showtab}}%);"></view>
+			</view>
+
+      <!-- 滑动列表体 -->
+			<view class="tab-content" style="" bindtouchstart="scrollTouchstart" bindtouchmove="scrollTouchmove" bindtouchend="scrollTouchend" style="width: {{tabnav.tabnum*100}}%;transform:translateX(-{{showtab*100/tabnav.tabnum}}%);margin-left: {{marginleft}}px;">			
+				<view class="tab-panel">
+					<view class="test-list">
+						  <view class="book-content">
+              <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+                <view class="book-list">
+                  <view class="book-image">
+                    <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                  </view>
+                  <view class="book-info">
+                    <view class="book-info-style">
+                      <view>书名：{{item.BooksName}}</view>
+                      <view>作者：{{item.Author}}\n</view>
+                      <view>价格：￥{{item.Price}}\n</view>
+                      <view>出版社信息：{{item.Message}}\n</view>
+                      <view>预约的数量：{{item.LendNum}}\n</view>
+                    </view>
+                  </view>
+                </view>
+                <view class="line"></view>
+              </view>
+            </view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+					  <view class="book-content">
+            <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+              <view class="book-list">
+                <view class="book-image">
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                </view>
+                <view class="book-info">
+                  <view class="book-info-style">
+                    <view>书名：{{item.BooksName}}</view>
+                    <view>作者：{{item.Author}}\n</view>
+                    <view>价格：￥{{item.Price}}\n</view>
+                    <view>出版社信息：{{item.Message}}\n</view>
+                    <view>预约的数量：{{item.LendNum}}\n</view>
+                  </view>
+                </view>
+              </view>
+              <view class="line"></view>
+            </view>
+          </view>
+					</view>
+				</view>
+				<view class="tab-panel">
+					<view class="test-list">
+					  <view class="book-content">
+            <view wx:for="{{carts}}" wx:key="{{index}}" bindtap='navigatordetails' data-aid="{{item.Id}}">
+              <view class="book-list">
+                <view class="book-image">
+                  <image src="http://localhost:49590/{{item.PicturePath}}"></image>
+                </view>
+                <view class="book-info">
+                  <view class="book-info-style">
+                    <view>书名：{{item.BooksName}}</view>
+                    <view>作者：{{item.Author}}\n</view>
+                    <view>价格：￥{{item.Price}}\n</view>
+                    <view>出版社信息：{{item.Message}}\n</view>
+                    <view>预约的数量：{{item.LendNum}}\n</view>
+                  </view>
+                </view>
+              </view>
+              <view class="line"></view>
+            </view>
+          </view>
+					</view>
+				</view>
+			</view>
+		</view>
+	</view>
+</view>
